Edited wiki page DescricaoAplicativo through web user interface.

--- a/wiki/DescricaoAplicativo.wiki
+++ b/wiki/DescricaoAplicativo.wiki
@@ -1,4 +1,4 @@
-=titulo: Calculadora Generos Alimenticios=
+=titulo: Calculadora Generos Alimentícios=
 
 Grupo: Géssica, Dennis, João Paulo e Wesley
 
