--- a/wiki/DescricaoAplicativo.wiki
+++ b/wiki/DescricaoAplicativo.wiki
@@ -4,7 +4,7 @@
        Géssica;<br>
        Dennis;<br>
        João Paulo; <br>
-       e Wesley <br>
+       Wesley Rebelo<br>
 
 ==Descrição==
 Este aplicativo será útil em cozinhas industriais para cálculo diário de alguns gêneros de alimentação.<BR>
